--- a/config.yaml
+++ b/config.yaml
@@ -1,20 +1,20 @@
-title: Stackbit Fresh Theme
+title: Harish Singh
 baseURL: /
 params:
-  layout_style: overflow
-  palette: blue
-  header:
-    title: Stackbit Fresh
-    tagline: Header Tagline
-    profile_img: images/avatar.png
-    bg: dark
-    has_nav: true
-    has_social: true
   footer:
     content: '&copy; Stackbit-Fresh. All rights reserved.'
     links:
-      - text: Made with Stackbit
+      - new_window: true
+        text: Made with Stackbit
         url: 'https://www.stackbit.com'
-        new_window: true
+  header:
+    bg: dark
+    has_nav: true
+    has_social: true
+    profile_img: images/avatar.png
+    tagline: Header Tagline
+    title: Stackbit Fresh
+  layout_style: overflow
+  palette: blue
 disableKinds:
   - RSS
